--- a/browse.html
+++ b/browse.html
@@ -13,6 +13,12 @@
         <button class="back-button" onclick="window.location.href='index.html'">
             <i class="fas fa-arrow-left"></i> Back to Accounts
         </button>
+        <button class="create-folder-button">Create New Folder</button>
+        <button class="move-button" id="moveButton" disabled>
+            <i class="fas fa-folder-open"></i> Move Selected
+        </button>
+      
+
 
         <div class="drop-zone" id="dropZone">
             <i class="fas fa-upload"></i> Drag and drop files here to upload
@@ -22,253 +28,19 @@
     </div>
 
     <div class="toast" id="toast">Copied to clipboard!</div>
+    <div class="modal" id="folderPickerModal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3>Select Destination Folder</h3>
+                <button class="close-modal">&times;</button>
+            </div>
+            <div class="modal-body" id="modalFolderContents"></div>
+            <div class="modal-footer">
+                <button class="btn" onclick="confirmMove()">Move Here</button>
+            </div>
+        </div>
+    </div>
 
-    <script>
-        let accessToken;
-        let currentAccount;
-
-        async function fetchDriveContents(folderId = 'root') {
-            let allFiles = [];
-            let pageToken = null;
-            do {
-                const response = await fetch(`https://www.googleapis.com/drive/v3/files?q='${folderId}'+in+parents&fields=files(id,name,mimeType,size,modifiedTime),nextPageToken&pageToken=${pageToken || ''}`, {
-                    headers: { 'Authorization': `Bearer ${accessToken}` }
-                });
-                const data = await response.json();
-                allFiles = allFiles.concat(data.files);
-                pageToken = data.nextPageToken || null;
-            } while (pageToken);
-            return allFiles;
-        }
-
-        function getFileIcon(mimeType) {
-            const iconMap = {
-                'application/vnd.google-apps.folder': 'fa-folder',
-                'application/vnd.google-apps.document': 'fa-file-word',
-                'application/vnd.google-apps.spreadsheet': 'fa-file-excel',
-                'application/vnd.google-apps.presentation': 'fa-file-powerpoint',
-                'image/jpeg': 'fa-file-image',
-                'image/png': 'fa-file-image',
-                'image/gif': 'fa-file-image',
-                'application/pdf': 'fa-file-pdf',
-                'application/zip': 'fa-file-zipper',
-                'text/plain': 'fa-file-lines',
-                'audio/mpeg': 'fa-file-audio',
-                'video/mp4': 'fa-file-video'
-            };
-            return iconMap[mimeType] || 'fa-file';
-        }
-
-        function formatBytes(bytes) {
-            if (!bytes) return '';
-            bytes = parseInt(bytes);
-            if (bytes === 0) return '0 Bytes';
-            const k = 1024;
-            const sizes = ['Bytes', 'KB', 'MB', 'GB', 'TB'];
-            const i = Math.floor(Math.log(bytes) / Math.log(k));
-            return parseFloat((bytes / Math.pow(k, i)).toFixed(2)) + ' ' + sizes[i];
-        }
-
-        function renderContents(files, parentElement) {
-            parentElement.innerHTML = '';
-            files.forEach(file => {
-                const isFolder = file.mimeType === 'application/vnd.google-apps.folder';
-                const iconClass = getFileIcon(file.mimeType);
-                const size = file.size ? formatBytes(file.size) : '';
-                const modifiedTime = new Date(file.modifiedTime).toLocaleDateString();
-
-                const itemDiv = document.createElement('div');
-                itemDiv.className = 'drive-item';
-                itemDiv.innerHTML = `
-                    <div class="item-header">
-                        <div class="item-icon">
-                            <i class="fas ${iconClass}"></i>
-                        </div>
-                        <span class="item-name">${file.name}</span>
-                        <div class="item-actions">
-                            ${!isFolder ? `<span class="file-info">${size} • ${modifiedTime}</span>` : ''}
-                            <button class="copy-btn" onclick="copyToClipboard('${file.id}')">
-                                <i class="fas fa-copy"></i>
-                            </button>
-                            <button class="rename-btn" onclick="renameItem('${file.id}', '${file.name}')">
-                                <i class="fas fa-edit"></i>
-                            </button>
-                            <button class="delete-btn" onclick="deleteItem('${file.id}')">
-                                <i class="fas fa-trash"></i>
-                            </button>
-                            ${isFolder ? `
-                                <button class="expand-btn" onclick="toggleFolder('${file.id}', this)">
-                                    <i class="fas fa-caret-right"></i>
-                                </button>
-                            ` : ''}
-                        </div>
-                    </div>
-                    <div class="children"></div>
-                `;
-                parentElement.appendChild(itemDiv);
-            });
-        }
-
-        async function toggleFolder(folderId, button) {
-            const childrenDiv = button.closest('.item-header').nextElementSibling;
-            const icon = button.querySelector('i');
-            
-            if (childrenDiv.children.length === 0) {
-                button.disabled = true;
-                icon.className = 'fas fa-spinner loading';
-                try {
-                    const files = await fetchDriveContents(folderId);
-                    renderContents(files, childrenDiv);
-                    icon.className = 'fas fa-caret-down';
-                    childrenDiv.style.display = 'block';
-                } catch (error) {
-                    console.error('Error fetching folder contents:', error);
-                    icon.className = 'fas fa-exclamation-triangle';
-                    showToast('Failed to load folder!', true);
-                } finally {
-                    button.disabled = false;
-                }
-            } else {
-                childrenDiv.style.display = childrenDiv.style.display === 'none' ? 'block' : 'none';
-                icon.className = childrenDiv.style.display === 'none' 
-                    ? 'fas fa-caret-right' 
-                    : 'fas fa-caret-down';
-            }
-        }
-
-        async function uploadFile(file, parentId = 'root') {
-            const metadata = {
-                name: file.name,
-                parents: [parentId]
-            };
-
-            const formData = new FormData();
-            formData.append('metadata', new Blob([JSON.stringify(metadata)], { type: 'application/json' }));
-            formData.append('file', file);
-
-            try {
-                await fetch('https://www.googleapis.com/upload/drive/v3/files?uploadType=multipart', {
-                    method: 'POST',
-                    headers: { 'Authorization': `Bearer ${accessToken}` },
-                    body: formData
-                });
-                showToast('File uploaded successfully!');
-                refreshContents();
-            } catch (error) {
-                console.error('Error uploading file:', error);
-                showToast('Failed to upload file!', true);
-            }
-        }
-
-        async function deleteFile(fileId) {
-            try {
-                await fetch(`https://www.googleapis.com/drive/v3/files/${fileId}`, {
-                    method: 'DELETE',
-                    headers: { 'Authorization': `Bearer ${accessToken}` }
-                });
-                showToast('File/folder deleted successfully!');
-                return true;
-            } catch (error) {
-                console.error('Error deleting file:', error);
-                showToast('Failed to delete file/folder!', true);
-                return false;
-            }
-        }
-
-        async function renameFile(fileId, newName) {
-            try {
-                await fetch(`https://www.googleapis.com/drive/v3/files/${fileId}`, {
-                    method: 'PATCH',
-                    headers: {
-                        'Authorization': `Bearer ${accessToken}`,
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify({ name: newName })
-                });
-                showToast('File/folder renamed successfully!');
-                return true;
-            } catch (error) {
-                console.error('Error renaming file:', error);
-                showToast('Failed to rename file/folder!', true);
-                return false;
-            }
-        }
-
-        function setupDragAndDrop() {
-            const dropZone = document.getElementById('dropZone');
-
-            dropZone.addEventListener('dragover', (e) => {
-                e.preventDefault();
-                dropZone.classList.add('dragover');
-            });
-
-            dropZone.addEventListener('dragleave', () => {
-                dropZone.classList.remove('dragover');
-            });
-
-            dropZone.addEventListener('drop', async (e) => {
-                e.preventDefault();
-                dropZone.classList.remove('dragover');
-
-                const files = e.dataTransfer.files;
-                for (const file of files) {
-                    await uploadFile(file);
-                }
-            });
-        }
-
-        async function refreshContents() {
-            const driveContents = document.getElementById('driveContents');
-            const currentFolderId = driveContents.dataset.folderId || 'root';
-            const files = await fetchDriveContents(currentFolderId);
-            renderContents(files, driveContents);
-        }
-
-        async function renameItem(fileId, currentName) {
-            const newName = prompt('Enter new name:', currentName);
-            if (newName && newName !== currentName) {
-                const success = await renameFile(fileId, newName);
-                if (success) refreshContents();
-            }
-        }
-
-        async function deleteItem(fileId) {
-            if (confirm('Are you sure you want to delete this file/folder?')) {
-                const success = await deleteFile(fileId);
-                if (success) refreshContents();
-            }
-        }
-
-        function copyToClipboard(text) {
-            navigator.clipboard.writeText(text)
-                .then(() => showToast('Copied to clipboard!'))
-                .catch(() => showToast('Failed to copy!', true));
-        }
-
-        function showToast(message, isError = false) {
-            const toast = document.getElementById('toast');
-            toast.textContent = message;
-            toast.style.background = isError ? '#dc3545' : '#34a853';
-            toast.style.display = 'block';
-            setTimeout(() => toast.style.display = 'none', 2000);
-        }
-
-        document.addEventListener('DOMContentLoaded', async () => {
-            setupDragAndDrop();
-
-            const urlParams = new URLSearchParams(window.location.search);
-            const accountEmail = decodeURIComponent(urlParams.get('account'));
-            const accounts = JSON.parse(localStorage.getItem('gdrive_accounts')) || [];
-            currentAccount = accounts.find(acc => acc.email === accountEmail);
-
-            if (!currentAccount) {
-                window.location.href = 'index.html';
-                return;
-            }
-
-            accessToken = currentAccount.accessToken;
-            refreshContents();
-        });
-    </script>
+<script src="/js/browse.js"></script>
 </body>
 </html>
