--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google Drive Manager</title>
     <link rel="stylesheet" href="css/index.css">
+    <link rel="manifest" href="/manifest.json">
 
 </head>
 <body>
@@ -27,10 +28,8 @@
     </div>
     
     
-
     <script src="/js/index.js" type="module"></script>
-
-
+    <script src="js/main.js"></script>
     <script src="https://apis.google.com/js/api.js"></script>
     <script src="https://accounts.google.com/gsi/client"></script>
 </body>
