--- a/browse.html
+++ b/browse.html
@@ -5,17 +5,18 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Browse Google Drive</title>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="/css/browse.css">
 </head>
 <body>
     <div class="container">
         <button class="back-button" onclick="window.location.href='index.html'">
-            <i class="fas fa-arrow-left"></i> Back to Accounts
+            <i class="fas fa-arrow-left"></i>
         </button>
-        <button class="create-folder-button">Create New Folder</button>
+        <button class="create-folder-button"> <i class="fa-solid fa-folder-plus"></i></button>
         <button class="move-button" id="moveButton" disabled>
-            <i class="fas fa-folder-open"></i> Move Selected
+            <i class="fas fa-folder-open"></i> Move
         </button>
       
 
