--- a/browse.html
+++ b/browse.html
@@ -23,9 +23,10 @@
       
 
 
-        <div class="drop-zone" id="dropZone" >
+        <div class="drop-zone" id="dropZone">
             <i class="fas fa-upload"></i> Drag and drop files here to upload
-        </div>
+          </div>
+          <input type="file" id="hiddenFileInput" multiple style="display:none;">
 
         <div id="driveContents"></div>
         
